hphp/hack/test/typecheck/as_expression/invalid_hint_void.php
<?hh

function foo(mixed $x): void {
  $x as void;
}
